[gd_scene load_steps=9 format=3 uid="uid://p5btbvspk3jm"]

[ext_resource type="Texture2D" uid="uid://cl5t4yta3ar3s" path="res://Assets/Sprites/background.jpg" id="1_1ehe0"]
[ext_resource type="Script" uid="uid://xdhlnjcu1xmq" path="res://Scripts/main_menu.gd" id="1_ce3w2"]
[ext_resource type="FontFile" uid="uid://bccw2m0kgwvl1" path="res://Assets/fonts/Realwood Regular.otf" id="2_48xlc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n45e2"]
texture = ExtResource("1_1ehe0")
modulate_color = Color(0.552956, 0.552956, 0.552956, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ehe0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ehe0"]
bg_color = Color(0.741387, 0.395126, 0.186634, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce3w2"]
bg_color = Color(0.64491, 0.335747, 0.147299, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n45e2"]
bg_color = Color(0.79318, 0.430523, 0.214648, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3
shadow_offset = Vector2(0, 3)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ce3w2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_n45e2")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.506944
anchor_top = 0.186728
anchor_right = 0.506944
anchor_bottom = 0.186728
offset_left = -440.0
offset_top = -47.0
offset_right = 556.0
offset_bottom = 49.0
grow_horizontal = 2
scale = Vector2(0.882547, 0.995276)
theme_override_colors/font_color = Color(0.792157, 0.431373, 0.215686, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 7
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 318
text = "Archer Hunt"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(360, 240)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.007
anchor_bottom = 0.007
offset_left = 600.0
offset_top = 483.44
offset_right = 960.0
offset_bottom = 723.44
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2.032)
theme_override_constants/separation = 8

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_hover_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_hover_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_disabled_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_hover_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_focus_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_normal_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_outline_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_color = Color(0.273345, 0.127853, 0.0362668, 1)
theme_override_colors/font_focus_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 54
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_n45e2")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_hover_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_hover_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_disabled_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_hover_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_focus_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_normal_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_outline_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_color = Color(0.273345, 0.127853, 0.0362668, 1)
theme_override_colors/font_focus_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 54
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_n45e2")
text = "Mode: Timer"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_hover_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_hover_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_disabled_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_hover_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_focus_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/icon_normal_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_outline_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_color = Color(0.273345, 0.127853, 0.0362668, 1)
theme_override_colors/font_focus_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_colors/font_pressed_color = Color(0.27451, 0.129412, 0.0352941, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 54
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ehe0")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_n45e2")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_mode_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
